2011-01-10  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: New test for prelinked addrs.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.
	* testfile52.so.bz2, testfile52.so.debug.bz2: New data files.
	* testfile52.prelink.so.bz2: New data file, shows REL->RELA.
	* testfile53.bz2, testfile53.debug.bz2: New data files.
	* testfile53.prelink.bz2: New data file, shows ET_EXEC remap.
	* Makefile.am (EXTRA_DIST): Add them.

2010-06-04  Roland McGrath  <roland@redhat.com>

	* run-unstrip-test.sh: Also test modifying the file in place.

2010-04-22  Roland McGrath  <roland@redhat.com>

	* addrcfi.c (handle_cfi): Fix function name in error message.
	Use dwarf_errmsg, not dwfl_errmsg, after dwarf_cfi_addrframe.

2010-04-14  Roland McGrath  <roland@redhat.com>

	* Makefile.am (EXTRA_DIST): Add run-test-flag-nobits.sh here too.

2010-04-10  Ulrich Drepper  <drepper@redhat.com>

	* msg_tst.c: Adjust expected error message.

2010-04-01  Petr Machata  <pmachata@redhat.com>

	* test-flag-nobits.c: New test.
	* run-test-flag-nobits.sh: And its wrapper.
	* Makefile.am (noinst_PROGRAMS, TESTS): Add them.
	(test_flag_nobits_LDADD): New variable.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

	* asm-tst9.c (main): Rename local to avoid shadowing another local.

2009-07-22  Roland McGrath  <roland@redhat.com>

	* addrcfi.c: Update dwarf_frame_{cfa,register} calling convention.

2009-07-08  Roland McGrath  <roland@redhat.com>

	* addrcfi.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(addrcfi_LDADD): New variable.

2009-05-07  Petr Machata  <pmachata@redhat.com>

	* testfile51.bz2: New data file.
	* dwarf-getmacros.c: New test core.
	* run-dwarf-getmacros.sh: New test wrapper.
	* Makefile.am (TESTS, EXTRA_DIST, noinst_PROGRAMS): Add them.
	(dwarf_getmacros_LDADD): New variable.

2009-04-23  Ulrich Drepper  <drepper@redhat.com>

	* Makefile [BUILD_STATIC] (libdw): Add $(zip_LIBS).